[build-system]
requires = ["setuptools>=61.2", "versioneer[toml]==0.29"]
build-backend = "setuptools.build_meta"

[project]
name = "partd"
description = "Appendable key-value storage"
maintainers = [{name = "Matthew Rocklin", email = "mrocklin@gmail.com"}]
license = {text = "BSD"}
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
readme = "README.rst"
urls = {Homepage = "http://github.com/dask/partd/"}
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    "locket",
    "toolz",
]

[project.optional-dependencies]
complete = [
    "numpy >= 1.20.0",
    "pandas >=1.3",
    "pyzmq",
    "blosc",
]

[tool.setuptools]
packages = ["partd"]
zip-safe = false
include-package-data = false

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "partd/_version.py"
versionfile_build = "partd/_version.py"
tag_prefix = ""
parentdir_prefix = "partd-"

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
filterwarnings = ["error"]
