[metadata]
name = partd
description = Appendable key-value storage
url = http://github.com/dask/partd/
maintainer = Matthew Rocklin
maintainer_email = mrocklin@gmail.com
license = BSD
keywords =
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
long_description = file: README.rst

[options]
packages = partd
python_requires = >=3.7
zip_safe = False
install_requires = file: requirements.txt

[options.extras_require]
complete =
    numpy >= 1.9.0
    pandas >=0.19.0
    pyzmq
    blosc

[versioneer]
VCS = git
style = pep440
versionfile_source = partd/_version.py
versionfile_build = partd/_version.py
tag_prefix =
parentdir_prefix = partd-

[tool:pytest]
addopts = --strict-markers --strict-config
filterwarnings = error
